<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.github.barteksc.pdfviewer.PDFView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/AllNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/pencil" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eventBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="50dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/inserted_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:layout_alignParentTop="true"
                android:layout_marginVertical="12dp"
                android:maxHeight="200dp"
                android:scaleType="centerInside"
                app:shapeAppearance="@style/ShapeAppearance.MyApp.ImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_save" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/inserted_draw"
                android:layout_width="200dp"
                android:visibility="gone"
                android:layout_height="200dp"
                android:layout_marginHorizontal="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginVertical="12dp"
                android:maxHeight="200dp"
                app:shapeAppearance="@style/ShapeAppearance.MyApp.ImageView"
                android:scaleType="centerInside"
                app:layout_constraintStart_toEndOf="@+id/inserted_image"
                app:layout_constraintTop_toBottomOf="@+id/back_save" />

            <ImageView
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="@+id/upload"
                app:layout_constraintEnd_toStartOf="@+id/upload"
                app:layout_constraintTop_toTopOf="@+id/upload"
                app:srcCompat="@drawable/ic_baseline_delete_24" />

            <View
                android:id="@+id/view23"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/back_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <EditText
                android:id="@+id/notestitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="#00000000"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textColorHint="@color/LightGrey"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inserted_image" />

            <EditText
                android:id="@+id/notestext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="#00000000"
                android:hint="@string/note"
                android:textColor="@color/black"
                android:textColorHint="@color/LightGrey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.156"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notestitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#EDEADE"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/insert_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginHorizontal="15dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/image" />

                <ImageView
                    android:id="@+id/insert_drawing"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5dp"
                    app:srcCompat="@drawable/paint_brush" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/right_drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#282C35"
        android:gravity="right"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/more_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="4dp"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/newnote"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text="@string/new_note"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_baseline_note_add_24" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_options" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.drawerlayout.widget.DrawerLayout>